--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.12"
+    "mongoose": "^5.7.12",
+    "node-sass": "^4.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
