--- a/package.json
+++ b/package.json
@@ -21,15 +21,11 @@
   },
   "homepage": "https://github.com/phoenix3x3/ToDo#readme",
   "dependencies": {
-    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
-    "dispatch": "^1.0.2",
     "express": "^4.17.1",
     "mongoose": "^5.7.12",
-    "node-sass": "^4.13.0",
-    "react-router-dom": "^5.1.2",
-    "uuid": "^3.3.3"
+    "node-sass": "^4.13.0"
   },
   "devDependencies": {
     "@svgr/cli": "^4.3.3",
